docs: improve binding doc
Add section to the binding documentation that explains
when it is necessary to use createBindingFromClass
method.

--- a/docs/site/sidebars/lb4_sidebar.yml
+++ b/docs/site/sidebars/lb4_sidebar.yml
@@ -153,7 +153,7 @@ children:
     url: Access-databases.html
     output: 'web, pdf'
     children:
-      
+
     - title: 'Working with data'
       url: Working-with-data.html
       output: 'web, pdf'
@@ -253,7 +253,7 @@ children:
         url: Validation-ORM-layer.html
         output: 'web, pdf'
 
-- title: 'Behind the Scene'
+- title: 'Behind the Scenes'
   url: Behind-the-scene.html
   output: 'web, pdf'
   children:
